Fix edge cases/bugs in calculator functionality
- Set a minimum width to the display to avoid large numbers overflowing
- limit number input to 16 digits (calc accuracy lowers beyond 16)
- "=" button only works when an operator has been pressed
- dividing by zero displays a message to the user
- pressing operators in succession will no longer calculate;
numbers must be pressed in between operator presses
- moved some code into functions to look cleaner

--- a/styles.css
+++ b/styles.css
@@ -3,7 +3,8 @@
     display: flex;
     flex-direction: column;
     flex: 1 0 auto;
-
+    min-width: 465px;
+    
     border: 1px black solid;
     border-radius: 10px;
     padding: 10px;
